--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,28 @@
     --color-violetaC: #9575DE;
     --color-blanco: #F8F8F8;
 }
-
+h1, h2, h3,p{
+    font-family: 'Ysabeau SC', sans-serif;
+}
+.userName{
+    color: var(--color-blanco);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-size: 1.7em;
+    position: relative;
+    left:9.5em;
+    top:0.11em;
+}
 .body{
     background-color: var(--color-negro);
+    height: 848px;
+    position: sticky;
 }
 
 footer{
     background-color: var(--color-rosa);
     color: var(--color-blanco);
-    text-align: center;
+    text-align: center;    
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .navbar{
@@ -24,48 +37,297 @@ footer{
     background-color: var(--color-violetaC) ;
     color: var(--color-blanco);
     border-radius: 20px;
-    margin-left: 355px;
+    margin-left: 310px;
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size: 1.2em;
+    padding: 8px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: all 0.5s ease;
 }
 #register, #logout{
     background-color: var(--color-violetaC) ;
     color: var(--color-blanco);
     border-radius: 20px;
-    margin-left: 280px;
+    margin-left: 250px;
+    font-family: 'Ysabeau SC', sans-serif;
+    padding: 5px;
+    font-size: 1.2em;
+    padding: 8px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: all 0.5s ease;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
 }
-#loginButton, registerButton{
+#logout:hover{
+    transition: all 0.5s ease;
+    background-color: var(--color-violeta) ;
+}
+#loginButton, #registerButton{
     background-color: var(--color-violetaC) ;
     color: var(--color-blanco);
     border-radius: 20px;
+    padding: 5px;
+    transition: all 0.5s ease;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
 }
 .Title{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color:whitesmoke;
-    text-align: center;
+    font-family: 'Ysabeau SC', sans-serif;
+    color:var(--color-blanco);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    transition: all 0.5s ease;
+
+}
+
+.Title:hover{
+    font-family: 'Ysabeau SC', sans-serif;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    transition: all 0.5s ease;
+    color: var(--color-violeta);
+    bottom: 1px;
+    position: relative;
+    transition: all 0.5s ease;
+}
+.title{
+    font-family: 'Ysabeau SC', sans-serif;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    transition: all 0.5s ease;
+    color: var(--color-violeta);
+    bottom: 1px;
+    position: relative;
+    transition: all 0.5s ease;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+
+}
+.habitaciones:hover{
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size:1.81em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    position: relative;
+    left:20%;
+    top:6.5px;
+    transition: all 0.5s ease;
+    color: var(--color-violeta) ;
+}
+.habitaciones{
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size:1.8em;
+    color:var(--color-blanco);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    position: relative;
+    left:20%;
+    top:10px;
+    transition: all 0.5s ease;
+    margin-right: 1em;
+}
+
+
+.flex{
+    display: flex; 
 }
 
 #carouselExample{
     display: flex;
     width: 500px;
 }
+a {
+    text-decoration: none; /* Quita el subrayado */
+    color: inherit; /* Utiliza el color heredado */
+  }
+a:link{
+    text-decoration: none; /* Quita el subrayado */
+    color: inherit; /* Utiliza el color heredado */
+  }
 /* Forms */
 
 .forms{
+    margin-top: 10%;
     background-color: var(--color-rosa);
     color: var(--color-blanco);
-    width: 768px;
-    height: 768px;
-    padding: 5%;
-    border-radius: 70px;
-    margin-left:20%;
+    border-radius: 35px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: var(--color-violeta);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    padding: 2%;
     text-align: center;
-    justify-content: center;
-    
+    height: 600px;
+    padding-top: 5%;
 }
 .forms h2{
-    font-size: 3rem;
+    font-size:5em;
+    padding-bottom: 4%;
 }
-.forms p{
-    font-size: 2rem;
+.forms input{
+    padding: 5px;
+    margin: 5px;
+    border-radius: 15px;
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size: 2em;
+    display: block;
+    align-self: center;
+    margin-left:29%;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+
 }
+.forms label{
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size: 2em;
+    display: block;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    
+}
+
+.forms button{
+    margin-top: 7%;
+    font-size: 1.5em;
+    font-family: 'Ysabeau SC', sans-serif;
+    width: 500px;
+    align-self: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: all 0.5s ease;
+
+
+}
+input:focus {
+    border-color: var(--color-violeta);
+}
+.forms button:hover{
+    background-color:var(--color-negro) ;
+    color: var(--color-blanco);
+    border-radius: 20px;
+    padding: 5px;
+}
+
+/* Register */
+
+.register{
+    margin-top: 2%;
+    background-color: var(--color-rosa);
+    color: var(--color-blanco);
+    border-radius: 35px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: var(--color-violeta);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    padding: 2%;
+    text-align: center;
+    min-height: 800px;
+    padding-top: 5%;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-negro) var(--color-rosa);
+}
+.register::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 100px;
+
+}
+  
+.register::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+    border-radius: 20px;
+
+}
+  
+.register::-webkit-scrollbar-thumb {
+    background-color: #333333;
+    border-radius: 20px;
+    height: 50px;
+}
+.container::-ms-scrollbar {
+    width: 8px;
+    right: 100px;
+    position: relative;
+    height: 600px;
+  }
+.register h2{
+    font-size:3em;
+    padding-bottom: 3%;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+}
+.register input{
+    padding: 5px;
+    margin: 5px;
+    border-radius: 15px;
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size: 1.2em;
+    display: block;
+    align-self: center;
+    margin-left:25%;
+    padding-left: 5px;
+    width: 450px;
+    text-align: center;
+    box-shadow: none;
+}
+.register input[type=text],.register input[type=password],.register input[type=date]{
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+
+}
+.register h2{
+    color: var(--color-violeta);
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+
+}
+.register label{
+    font-family: 'Ysabeau SC', sans-serif;
+    font-size: 1.4em;
+    display: block;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+}
+
+.register button{
+    margin-top: -30px;
+    font-size: 1.5em;
+    font-family: 'Ysabeau SC', sans-serif;
+    width: 500px;
+    align-self: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: all 0.5s ease;
+
+
+}
+.text-radio-input{
+    position: relative;
+    bottom: 1.35em;
+    right: 3em;
+}
+#year{
+    padding: 8px;
+    text-align: center;
+}
+button{
+    transition: all 0.5s ease;
+
+}
+#register:hover, #login:hover, #registerButton:hover, #loginButton:hover{
+    transition: all 0.5s ease;
+    background-color: var(--color-violeta) ;
+    transform: scale(1.0);
+}
+.register:focus {
+    border-color: var(--color-violeta);
+    box-shadow: 0 0 5px var(--color-violeta);
+}
+.error{
+    font-family: 'Ysabeau SC', sans-serif;
+    color:var(--color-negro);
+    text-shadow: 0 0 5px var(--color-blanco);
+
+}
+
 
